--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/fonts'] } }
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets', 'src/main/assets/fonts']
+            res.srcDirs = ['src/main/res', 'src/main/res/menu', 'src/main/res/image2']
+        }
+    }
 }
 
 dependencies {
